@@ -277,3 +277,14 @@ Feature: Multi Elements
    Scenario: Selecting lables using no identifier
      When I select all labels using no identifier
      Then I should have 3 labels
+
+   Scenario: Selecting file fields using an identifier
+     When I select the file fields with class "file_field_class"
+     Then I should have 3 file fields
+     And the title for file field 1 should be "File Field 1"
+     And the title for file field 2 should be "File Field 2"
+     And the title for file field 3 should be "File Field 3"
+
+   Scenario: Selecting file fields using no identifier
+     When I select all file fields using no identifier
+     Then I should have 3 file fields
